Complete executable scrollback parity